# yeelight-metadata-mcp

./: .gitignore  README.md  README.zh-CN.md  main.py  pyproject.toml  server.json  service.sh
guides/: integration.md  integration.zh-CN.md  usage.md  usage.zh-CN.md
resources/catalog/: metadata-mcp-interface-tree.json  metadata-mcp-missing-candidate-interface-tree.json  metadata-mcp-user-task-map.json
scripts/: action_acceptance_matrix.py  live_write_acceptance.py  mcp_acceptance_cli.py
src/config/: config.py  region.py
src/log/: logger.py
src/middleware/: auth.py
src/register/: register.py
src/service/: action_specs.py  executor.py  mcp_service.py  model.py  registry.py  request_context.py
src/utils/: auth.py  http.py
tests/: test_acceptance_cli.py  test_auth.py  test_auth_claims.py  test_config.py  test_main.py  test_region.py  test_registry.py  test_request_context.py
