[project]
name = "yeelight-metadata-mcp"
version = "1.0.0"
description = "MCP server for Yeelight home metadata and management workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yeelight" },
]
license = { text = "Apache-2.0" }
keywords = ["mcp", "model-context-protocol", "yeelight", "metadata", "smart-home"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Home Automation",
]
dependencies = [
    "uvicorn",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "nacos-sdk-python==2.0.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Yeelight/yeelight-metadata-mcp"
Repository = "https://github.com/Yeelight/yeelight-metadata-mcp"
Documentation = "https://github.com/Yeelight/yeelight-metadata-mcp#readme"
Issues = "https://github.com/Yeelight/yeelight-metadata-mcp/issues"
